<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.corner.takecontrol.ui.auth.LoginFragment"
        android:label="@string/sign_in">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.corner.takecontrol.ui.auth.RegisterFragment"
        android:label="@string/create_account">
        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_register_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.corner.takecontrol.ui.home.HomeFragment"
        android:label="@string/home_title">
        <action
            android:id="@+id/action_home_to_create"
            app:destination="@id/createChallengeFragment" />
        <action
            android:id="@+id/action_home_to_join"
            app:destination="@id/joinChallengeFragment" />
        <action
            android:id="@+id/action_home_to_detail"
            app:destination="@id/challengeDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/createChallengeFragment"
        android:name="com.corner.takecontrol.ui.challenge.CreateChallengeFragment"
        android:label="@string/create_challenge">
        <action
            android:id="@+id/action_create_to_detail"
            app:destination="@id/challengeDetailFragment"
            app:popUpTo="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/joinChallengeFragment"
        android:name="com.corner.takecontrol.ui.challenge.JoinChallengeFragment"
        android:label="@string/join_challenge">
        <action
            android:id="@+id/action_join_to_detail"
            app:destination="@id/challengeDetailFragment"
            app:popUpTo="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/challengeDetailFragment"
        android:name="com.corner.takecontrol.ui.challenge.ChallengeDetailFragment"
        android:label="Challenge">
        <argument
            android:name="challengeId"
            app:argType="string" />
    </fragment>
</navigation>
